# aeson-generic-default

./: CHANGELOG.md  LICENSE  README.md  aeson-generic-default.cabal
src/Data/Aeson/: DefaultField.hs
test/: Main.hs
